--- a/index.html
+++ b/index.html
@@ -24,10 +24,12 @@
     <header>
       <img src="images/logo/Booki.png" alt="Logo Booki" />
       <nav>
-        <a class="lien-hebergement" href="#hebergements-and-populaires"
-          >Hébergements</a
-        >
-        <a href="#activite">Activités</a>
+        <ul>
+          <li class="lien-hebergement">
+            <a href="#hebergements-and-populaires">Hébergements</a>
+          </li>
+          <li><a href="#activite">Activités</a></li>
+        </ul>
       </nav>
     </header>
     <main>
@@ -36,8 +38,12 @@
         <p>En plein centre-ville ou en pleine nature</p>
         <form class="filtre-search">
           <i class="fa-solid fa-location-dot"></i>
-          <input type="text" placeholder="Marseille, France" />
-          <button class="search-btn">
+          <input
+            type="search"
+            value="Marseille, France"
+            placeholder="Recherchez votre destination ici !"
+          />
+          <button type="button" class="search-btn">
             <span>Rechercher</span><i class="fa-solid fa-magnifying-glass"></i>
           </button>
         </form>
@@ -51,7 +57,7 @@
         </div>
 
         <div class="filtre-result">
-          <i class="fa-solid fa-info"></i>
+          <div class="circle-container"><i class="fa-solid fa-info"></i></div>
           <p>Plus de 500 logements sont disponibles dans cette ville</p>
         </div>
       </section>
